Added planet data to planet.html

--- a/index.html
+++ b/index.html
@@ -77,5 +77,6 @@
     </table>
 
     <a href="items-sold.html">Items sold table</a>
+    <a href="planets.html">Planets data table</a>
   </body>
 </html>
